==> ObitoUchiha-K/Development-Kit-AVR/Chương trình ứng dụng thu phí tự động/mfrc522.c <==

#include "mfrc522.h"

// SPI
#define SPI_MOSI	5
#define SPI_MISO	6
#define SPI_SS		4
#define SPI_SCK		7
#define RESET       4//PD5
// SPI

//extern SPI_HandleTypeDef hspi1;

// MFRC522
extern void spi_init();
extern void SendSPI(uint8_t data);
extern uint8_t TransferSPI(uint8_t data);
extern void MFRC522_WriteRegister(uint8_t addr, uint8_t val);
extern uint8_t MFRC522_ReadRegister(uint8_t addr);
extern void MFRC522_SetBitMask(uint8_t reg, uint8_t mask);
extern void MFRC522_ClearBitMask(uint8_t reg, uint8_t mask);
extern uint8_t MFRC522_Request(uint8_t reqMode, uint8_t* TagType);
extern uint8_t MFRC522_ToCard(uint8_t command, uint8_t* sendData, uint8_t sendLen, uint8_t* backData, uint16_t* backLen);
extern uint8_t MFRC522_Anticoll(uint8_t* serNum);
extern void MFRC522_CalulateCRC(uint8_t* pIndata, uint8_t len, uint8_t* pOutData);
extern uint8_t MFRC522_SelectTag(uint8_t* serNum);
extern uint8_t MFRC522_Auth(uint8_t authMode, uint8_t BlockAddr, uint8_t* Sectorkey, uint8_t* serNum);
extern uint8_t MFRC522_Read(uint8_t blockAddr, uint8_t* recvData);
extern uint8_t MFRC522_Write(uint8_t blockAddr, uint8_t* writeData);
extern void MFRC522_Init(void);
extern void MFRC522_Reset(void);
extern void MFRC522_Hard_Reset(void);
extern void MFRC522_AntennaOn(void);
extern void MFRC522_AntennaOff(void);
extern void MFRC522_Halt(void);
///////////
void spi_init()
{
	DDRB|=(1<<SPI_MOSI)|(1<<SPI_SCK);
	DDRB|= (1<<SPI_SS);
	PORTB|= (1<<SPI_SS);
	// SPI Type: Master
	// SPI Clock Rate: 500.000 kHz
	// SPI Data Order: MSB First
	SPCR0= (1<<SPE0) | (1<<MSTR0) | (1<<SPR00);


}
void SendSPI(uint8_t data)
{
	SPDR0 = data;
	while( !(SPSR0 & (1<<SPIF0)) );
}

uint8_t TransferSPI(uint8_t data)
{
	SPDR0 = data;
	while( !(SPSR0 & (1<<SPIF0)) );
	return SPDR0;
}
//////////
void MFRC522_WriteRegister(uint8_t reg, uint8_t val) {
		//CS low
		PORTB &= (~(1<<SPI_SS));
		SendSPI((reg<<1)&0x7E);
		SendSPI(val);
		PORTB |= (1<<SPI_SS);
}

uint8_t MFRC522_ReadRegister(uint8_t reg) {
	uint8_t data;
	PORTB &= (~(1<<SPI_SS));
	TransferSPI((reg<<1)|0x80);
	data = TransferSPI(0x00);
	PORTB |= (1<<SPI_SS);
	return data;
}


void MFRC522_SetBitMask(uint8_t reg, uint8_t mask) {
	MFRC522_WriteRegister(reg, MFRC522_ReadRegister(reg) | mask);
}

void MFRC522_ClearBitMask(uint8_t reg, uint8_t mask){
	MFRC522_WriteRegister(reg, MFRC522_ReadRegister(reg) & (~mask));
}

uint8_t MFRC522_Request(uint8_t reqMode, uint8_t* TagType) {
	uint8_t status;
	uint16_t backBits;																			// The received data bits
    MFRC522_Init();
	MFRC522_WriteRegister(BitFramingReg, 0x07);		// TxLastBists = BitFramingReg[2..0]
	TagType[0] = reqMode;
	status = MFRC522_ToCard(PCD_TRANSCEIVE, TagType, 1, TagType, &backBits);
	if ((status != MI_OK) || (backBits != 0x10)) status = MI_ERR;
	return status;
}

uint8_t MFRC522_ToCard(uint8_t command, uint8_t* sendData, uint8_t sendLen, uint8_t* backData, uint16_t* backLen) {
	uint8_t status = MI_ERR;
	uint8_t waitIRq = 0x00;
	uint8_t lastBits;
	uint8_t n;
	uint16_t i;

	switch (command) {
		case PCD_AUTHENT: {
			waitIRq = 0x10;
			break;
		}
		case PCD_TRANSCEIVE: {
			waitIRq = 0x30;
			break;
		}
		default:
		break;
	}

	MFRC522_WriteRegister(ComIrqReg,0x7F);
	MFRC522_SetBitMask(FIFOLevelReg, 0x80);
	MFRC522_WriteRegister(CommandReg, PCD_IDLE);

	// Writing data to the FIFO
	for (i = 0; i < sendLen; i++) MFRC522_WriteRegister(FIFODataReg, sendData[i]);

	// Execute the command
	MFRC522_WriteRegister(CommandReg, command);
	if (command == PCD_TRANSCEIVE) MFRC522_SetBitMask(BitFramingReg, 0x80);		// StartSend=1,transmission of data starts

	// Waiting to receive data to complete
	i = 40000;	//the operator M1 card maximum waiting time 25ms
	do {
		// CommIrqReg[7..0]
		// Set1 TxIRq RxIRq IdleIRq HiAlerIRq LoAlertIRq ErrIRq TimerIRq
		n = MFRC522_ReadRegister(ComIrqReg);
		i--;
	} while ((i!=0) && !(n&0x01) && !(n&waitIRq));

	MFRC522_ClearBitMask(BitFramingReg, 0x80);																// StartSend=0

	if (i != 0)  {
		if (!(MFRC522_ReadRegister(ErrorReg) & 0x1B)) {
			status = MI_OK;
			if (command == PCD_TRANSCEIVE) {
				n = MFRC522_ReadRegister(FIFOLevelReg);
				lastBits = MFRC522_ReadRegister(ControlReg) & 0x07;
				if (lastBits) *backLen = (n-1)*8+lastBits; else *backLen = n*8;
				if (n == 0) n = 1;
				if (n > MFRC522_MAX_LEN) n = MFRC522_MAX_LEN;
				for (i = 0; i < n; i++) backData[i] = MFRC522_ReadRegister(FIFODataReg);		// Reading the received data in FIFO
			}
		} else status = MI_ERR;
	}
	return status;
}

uint8_t MFRC522_Anticoll(uint8_t* serNum) {
	uint8_t status;
	uint8_t i;
	uint8_t serNumCheck = 0;
	uint16_t unLen;

	MFRC522_WriteRegister(BitFramingReg, 0x00);												// TxLastBists = BitFramingReg[2..0]
	serNum[0] = PICC_ANTICOLL;
	serNum[1] = 0x20;
	status = MFRC522_ToCard(PCD_TRANSCEIVE, serNum, 2, serNum, &unLen);
	if (status == MI_OK) {
		// Check card serial number
		for (i = 0; i < 4; i++) serNumCheck ^= serNum[i];
		if (serNumCheck != serNum[i]) status = MI_ERR;
	}
	return status;
}

void MFRC522_CalculateCRC(uint8_t*  pIndata, uint8_t len, uint8_t* pOutData) {
	uint8_t i;
	uint16_t n;

	MFRC522_ClearBitMask(DivIrqReg, 0x04);													// CRCIrq = 0
	MFRC522_SetBitMask(FIFOLevelReg, 0x80);													// Clear the FIFO pointer
	// Write_MFRC522(CommandReg, PCD_IDLE);

	// Writing data to the FIFO
	for (i = 0; i < len; i++) MFRC522_WriteRegister(FIFODataReg, *(pIndata+i));
	MFRC522_WriteRegister(CommandReg, PCD_CALCCRC);

	// Wait CRC calculation is complete
	i = 40000;
	do {
		n = MFRC522_ReadRegister(DivIrqReg);
		i--;
	} while ((i!=0) && !(n&0x04));																						// CRCIrq = 1

	// Read CRC calculation result
	pOutData[0] = MFRC522_ReadRegister(CRCResultRegL);
	pOutData[1] = MFRC522_ReadRegister(CRCResultRegH);
}

uint8_t MFRC522_SelectTag(uint8_t* serNum) {
	uint8_t i;
	uint8_t status;
	uint8_t size;
	uint16_t recvBits;
	uint8_t buffer[9];
    MFRC522_WriteRegister(BitFramingReg, 0x00);
	buffer[0] = PICC_SElECTTAG;
	buffer[1] = 0x70;
	for (i = 0; i < 5; i++) buffer[i+2] = *(serNum+i);
	MFRC522_CalculateCRC(buffer, 7, &buffer[7]);		//??
	status = MFRC522_ToCard(PCD_TRANSCEIVE, buffer, 9, buffer, &recvBits);
	if ((status == MI_OK) && (recvBits == 0x18)) size = buffer[0]; else size = 0;
	return size;
}

uint8_t MFRC522_Auth(uint8_t authMode, uint8_t BlockAddr, uint8_t* Sectorkey, uint8_t* serNum) {
	uint8_t status;
	uint16_t recvBits;
	uint8_t i;
	uint8_t buff[12];
    MFRC522_WriteRegister(BitFramingReg, 0x00);
	// Verify the command block address + sector + password + card serial number
	buff[0] = authMode;
	buff[1] = BlockAddr;
	for (i = 0; i < 6; i++) buff[i+2] = *(Sectorkey+i);
	for (i=0; i<4; i++) buff[i+8] = *(serNum+i);
	status = MFRC522_ToCard(PCD_AUTHENT, buff, 12, buff, &recvBits);
	if ((status != MI_OK) || (!(MFRC522_ReadRegister(Status2Reg) & 0x08))) status = MI_ERR;
	return status;
}

uint8_t MFRC522_Read(uint8_t blockAddr, uint8_t* recvData) {
	uint8_t status;
	uint16_t unLen;
    MFRC522_WriteRegister(BitFramingReg, 0x00);
	recvData[0] = PICC_READ;
	recvData[1] = blockAddr;
	MFRC522_CalculateCRC(recvData,2, &recvData[2]);
	status = MFRC522_ToCard(PCD_TRANSCEIVE, recvData, 4, recvData, &unLen);
	if ((status != MI_OK) || (unLen != 0x90)) status = MI_ERR;
	return status;
}

uint8_t MFRC522_Write(uint8_t blockAddr, uint8_t* writeData) {
	uint8_t status;
	uint16_t recvBits;
	uint8_t i;
	uint8_t buff[18];
    MFRC522_WriteRegister(BitFramingReg, 0x00);
	buff[0] = PICC_WRITE;
	buff[1] = blockAddr;
	MFRC522_CalculateCRC(buff, 2, &buff[2]);
	status = MFRC522_ToCard(PCD_TRANSCEIVE, buff, 4, buff, &recvBits);
	
	if ((status != MI_OK) || (recvBits != 4) || ((buff[0] & 0x0F) != 0x0A)) status = MI_ERR;
	
	if (status == MI_OK) {
		// Data to the FIFO write 16Byte
		for (i = 0; i < 16; i++) buff[i] = *(writeData+i);
		MFRC522_CalculateCRC(buff, 16, &buff[16]);
		status = MFRC522_ToCard(PCD_TRANSCEIVE, buff, 18, buff, &recvBits);
		
		_delay_ms(10);
		if ((status != MI_OK) || (recvBits != 4) || ((buff[0] & 0x0F) != 0x0A)) status = MI_ERR;
		
	}
	return status;
}
void MFRC522_Hard_Reset(){
		// hard reset
		DDRD|=(1<<RESET);
		PORTD&=~(1<<RESET);
		_delay_ms(50);
		PORTD|=(1<<RESET);
		_delay_ms(50);
		PORTD&=~(1<<RESET);
		DDRD&=~(1<<RESET);
}
void MFRC522_Init(void) {
	MFRC522_Hard_Reset();
	MFRC522_Reset();
    MFRC522_WriteRegister(TModeReg, 0x80);
    MFRC522_WriteRegister(TPrescalerReg, 0xA9);// f_timer=40khz
	MFRC522_WriteRegister(TReloadRegL, 30);
	MFRC522_WriteRegister(TReloadRegH, 0);
	MFRC522_WriteRegister(RFCfgReg, 0x70);				// 48dB gain
	MFRC522_WriteRegister(TxASKReg, 0x40);
	MFRC522_WriteRegister(ModeReg, 0x3D);
	MFRC522_AntennaOn();																		// Open the antenna
}

void MFRC522_Reset(void) {
	MFRC522_WriteRegister(CommandReg, PCD_RESETPHASE);
}

void MFRC522_AntennaOn(void) {
	uint8_t temp;

	temp = MFRC522_ReadRegister(TxControlReg);
	if (!(temp & 0x03)) MFRC522_SetBitMask(TxControlReg, 0x03);
}

void MFRC522_AntennaOff(void) {
	MFRC522_ClearBitMask(TxControlReg, 0x03);
}

void MFRC522_Halt(void) {
	uint16_t unLen;
	uint8_t buff[4];

	buff[0] = PICC_HALT;
	buff[1] = 0;
	MFRC522_CalculateCRC(buff, 2, &buff[2]);
	MFRC522_ToCard(PCD_TRANSCEIVE, buff, 4, buff, &unLen);
}
